# aus-health-mcp-data-agent

./: .gitignore  Makefile  README.md  mlflow.db
agents/nndss-agent/: Containerfile  app.py  chainlit.md  data_layer.py  mlflow_init.py  prompts.py  requirements.txt  system_prompt.md  tools.py
agents/nndss-chat-ui/: Containerfile  app.py  requirements.txt
agents/nndss-data-agent/: Containerfile  agent.yaml  pyproject.toml
agents/nndss-data-agent/chart/: values.yaml
agents/nndss-data-agent/chart/templates/: route.yaml
agents/nndss-data-agent/eval-pipeline/: components.py  pipeline.py
agents/nndss-data-agent/eval-pipeline/flows/: agent_flow.yaml
agents/nndss-data-agent/eval-pipeline/gold-standards/: q01.yaml  q02.yaml  q03.yaml  q04.yaml  q05.yaml  q06.yaml  q07.yaml  q08.yaml  q09.yaml  q10.yaml
agents/nndss-data-agent/eval-pipeline/prompts/: capability_judge.yaml  system.md
agents/nndss-data-agent/eval-pipeline/questions/: nndss-questions.jsonl
agents/nndss-data-agent/prompts/: system.md
agents/nndss-data-agent/src/: agent.py  mlflow_init.py  prompts.py
deploy/: dspa.yaml  mlflow-rbac.yaml  pipeline-mlflow-rbac.yaml  pipeline-s3-secret.yaml
docs/: architecture.md  evaluation-methodology.md  reasoning-protocol.md
evaluations/: datasets.py  pipeline.py  predictors.py  run_eval.py  scorers.py
scripts/: deploy-all.sh  download-fortnightly.py  eval-status.sh  eval-submit.sh  load-fortnightly-trino.py  load-nndss-trino.py  load-population-trino.py  register-prompt.sh  requirements.txt  set-model.sh  spicedb-manage.sh  upload-data.sh
(+71 files in other folders)
