[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nndss-data-agent"
version = "1.0.0"
description = "Australian disease surveillance data agent with structured reasoning (NNDSS)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "fastmcp>=3.0.0",
    "pydantic>=2.0",
    "pyyaml",
    "httpx",
    "python-frontmatter",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "aiosqlite>=0.20.0",
    "mlflow>=3.10.1",
]

[project.optional-dependencies]
feedback = [
    "fipsagents[feedback]",
]
files = [
    # Pulls in docling (text extraction) + python-magic (content-based
    # MIME sniffing). Adds ~500MB to the container image because of
    # docling's torch/transformers — leave opt-in unless the agent
    # actively ingests files.
    "fipsagents[files]",
]
memory = [
    "fipsagents[memory]",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
